# app/Http/Controllers/UserController.php
@@ -12,33 +12,52 @@ class UserController extends Controller
      *
      * @return \Illuminate\Http\Response
      */
+    /**
+     * @OA\Get(
+     *     path="/api/users",
+     *     summary="Get all users",
+     *     tags={"Users"},
+     *      @OA\Response(response=200, description="All Users" ),
+     *      @OA\Response(response=400, description="Bad request"),
+     *      @OA\Response(response=404, description="Resource Not Found"),
+     *     security={{"bearerAuth":{}}}
+     * )
+     */
     public function index()
     {
         $users = User::all();
         return response()->json($users);
     }
-
+    
     /**
      * Store a newly created resource in storage.
      *
      * @param  \Illuminate\Http\Request  $request
      * @return \Illuminate\Http\Response
      */
+    /**
+    * @OA\Post(
+        *     path="/api/users",
+        *     summary="Create a new user",
+        *     description="Create a new user with the provided username, email, and password",
+        *     tags={"Users"},
+        *     @OA\RequestBody(
+        *         required=true,
+        *         @OA\JsonContent(
+        *             required={"name", "email", "password"},
+        *             @OA\Property(property="name", type="string", example="john_doe"),
+        *             @OA\Property(property="email", type="string", format="email", example="john@example.com"),
+        *             @OA\Property(property="password", type="string", example="password123")
+        *         )
+        *     ),
+        *    @OA\Response(response=200, description="Create New User" ),
+       *     @OA\Response(response=400, description="Bad request"),
+       *      @OA\Response(response=404, description="Resource Not Found"),
+        * )
+        */
     public function store(Request $request)
     {
-        $request->validate([
-            'name' => 'required|string|min:3|max:15',
-            'email' => 'required|email|unique:users',
-            'password' => 'required|string|confirmed|min:8',
-        ]);
-
-        $user = User::create([
-            'name' => $request->name,
-            'password' => $request->password,
-            'email' => $request->email,
-        ]);
-
-        return response()->json($user, 201);
+        return User::create($request->all());
     }
 
     /**
@@ -47,6 +66,24 @@ class UserController extends Controller
      * @param  int  $id
      * @return \Illuminate\Http\Response
      */
+    /**
+ * @OA\Get(
+ *     path="/api/users/{id}",
+ *     summary="Get a specific user",
+ *     tags={"Users"},
+ *     @OA\Parameter(
+ *         name="id",
+ *         in="path",
+ *         required=true,
+ *         description="ID of the user to retrieve",
+ *         @OA\Schema(type="integer")
+ *     ),
+ *     @OA\Response(response=200, description="User Detail" ),
+ *      @OA\Response(response=400, description="Bad request"),
+ *      @OA\Response(response=404, description="Resource Not Found"),
+ *     security={{"bearerAuth":{}}}
+ * )
+ */
     public function show($id)
     {
         $user = User::find($id);
@@ -63,26 +100,30 @@ class UserController extends Controller
      * @param  int  $id
      * @return \Illuminate\Http\Response
      */
+      /**
+     * @OA\Put(
+     *     path="/api/users/{id}",
+     *     summary="Delete a specific user",
+     *     tags={"Users"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="User ID",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Response(response=200, description="Delate user" ),
+     *      @OA\Response(response=400, description="Bad request"),
+     *      @OA\Response(response=404, description="Resource Not Found"),
+     *     security={{"bearerAuth":{}}}
+     * )
+     */
     public function update(Request $request, $id)
     {
-        $user = User::find($id);
-        if (!$user) {
-            return response()->json(['error' => 'User not found'], 404);
-        }
-
-        $request->validate([
-            'name' => 'required|string|min:3|max:15',
-            'email' => 'required|email|unique:users',
-            'password' => 'required|string|confirmed|min:8',
-        ]);
-
-       $user->name = $request->name;
-       $user->email = $request->email;
-       $user->password = $request->password;
-       $user->save();
-
-        return response()->json($user);
-
+        
+    $user = User::findOrFail($id);
+    $user->update($request->all());
+    return $user;
     }
 
     /**
@@ -90,6 +131,36 @@ class UserController extends Controller
      *
      * @param  int  $id
      * @return \Illuminate\Http\Response
+     */
+     /**
+     * @OA\Delete(
+     *     path="/api/users/{id}",
+     *     summary="Update a specific user",
+     *     tags={"Users"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="User ID",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\RequestBody(
+ *         required=true,
+ *         @OA\MediaType(
+ *             mediaType="application/json",
+ *             @OA\Schema(
+ *                 type="object",
+ *                  @OA\Property(property="name", type="string", example="john_doe"),
+ *             @OA\Property(property="email", type="string", format="email", example="john@example.com"),
+ *             @OA\Property(property="password", type="string", example="password123")
+ *             )
+ *         )
+ *     ), 
+     *     @OA\Response(response=200, description="Update User"),
+     *     @OA\Response(response=400, description="Bad request"),
+     *     @OA\Response(response=404, description="Resource Not Found"),
+     *     security={{"bearerAuth":{}}}
+     * )
      */
     public function destroy($id)
     {
